--- a/README
+++ b/README
@@ -1,8 +1,10 @@
 You can contribute to this world!
 
-- best would be to make your own floor with art
+- it has to be your IP
+- f you want to be fancy, copy the map and make your own floor with art
+- if you don't want to make your own floor, I can make smaller isles for your art.
+I need: stripped .png images that have dimentions of multiples of 32 in each width and height
 - please release all assets in this repository to CC0 - public domain
-
 
 
 All assets in this repository are public domain.
